# whisper_stream_app

./: .gitignore  CMakeLists.txt  README.md
include/: whisper_client.hpp
src/: main.cpp  whisper_client.cpp
